[HDAUDBUS_NEW] - Add hdaudbus driver written by coolstar with some additional tweaks from me [KS] - Deactivate fast code path in KsSynchronousIoControlDevice [NTOS] - Workarround for non working KeRestoreFpuState / KeSaveFpuState - Hack for accesscheck to get win2k3 hdaudbus to open filter in KsStudio [USBPORT] - Fix potential infinite loop [POWERCFG] - Implement powermeter page partially with fixes by Herve [UMPNPMGR] - Implement partially Pnp_RegisterNotification Finally Dell Latitude D531 starts to output (glitchy) sound

--- a/dll/win32/CMakeLists.txt
+++ b/dll/win32/CMakeLists.txt
@@ -1,4 +1,3 @@
-
 add_subdirectory(acledit)
 add_subdirectory(aclui)
 add_subdirectory(activeds)
@@ -9,9 +8,11 @@ add_subdirectory(advpack)
 add_subdirectory(atl)
 add_subdirectory(atl100)
 add_subdirectory(atl80)
+add_subdirectory(audioeng)
 add_subdirectory(authz)
 add_subdirectory(avicap32)
 add_subdirectory(avifil32)
+add_subdirectory(avrt)
 add_subdirectory(batt)
 add_subdirectory(bcrypt)
 add_subdirectory(beepmidi)
