--- a/dll/win32/kernel32/kernel32_vista/CMakeLists.txt
+++ b/dll/win32/kernel32/kernel32_vista/CMakeLists.txt
@@ -12,7 +12,8 @@ list(APPEND SOURCE
     GetTickCount64.c
     InitOnce.c
     sync.c
-    vista.c)
+    vista.c
+    dep.c)
 
 # These functions are not exported from kernel32_vista (yet).
 # They are only used when NT6 exports in kernel32 are enabled.
